--- a/package.json
+++ b/package.json
@@ -20,17 +20,17 @@
   },
   "homepage": "https://github.com/kfaubel/imageServer#readme",
   "devDependencies": {
-    "nodemon": "^1.19.1"
+    "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "@google-cloud/storage": "^3.0.2",
+    "@google-cloud/storage": "^5.18.2",
+    "baseballimage": "github:kfaubel/baseballImage",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-basic-auth": "^1.2.0",
-    "express-rate-limit": "^5.0.0",
-    "weatherimage": "git+https://github.com/kfaubel/weatherImage.git",
-    "baseballimage": "git+https://github.com/kfaubel/baseballImage.git",
+    "express": "^4.17.3",
+    "express-basic-auth": "^1.2.1",
+    "express-rate-limit": "^6.3.0",
+    "weatherimage": "github:kfaubel/weatherImage",
     "xss-clean": "^0.1.1"
   },
   "nodemonConfig": {
